:bug: fix: move the main scrolls css to main layout to fix the overflow issue when refreshing the resume page

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@ body {
   background: var(--body-bg-color);
   color: var(--base-color);
   font-family: "Poppins", sans-serif;
-  font-display: swap;
 }
 
 img,
